# auto_bag

./: package.xml  setup.cfg  setup.py
auto_bag/: SaveToVideo.py  camera_capture.py  record.py
config/: topics.yaml
launch/: auto_bag_launch.py
