<?xml version="1.0"?>
<package format="3">
  <name>auto_bag</name>
  <version>0.0.1</version>
  <description>Client node to trigger topic recording</description>

  <maintainer email="emilienghazal@gmail.com">Emilien Ghazal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>auto_bag_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





